fix "contact" id overlap

--- a/assets/css/components/_footer.scss
+++ b/assets/css/components/_footer.scss
@@ -79,7 +79,7 @@ footer {
         }
 
         &#repo,
-        &#contact {
+        &#email {
             z-index: 5;
             @include mobile {
                 display: none;
